fix get first for java version 17